<resources>
    <string name="app_name">News Hunt</string>
    <string name="logo">logo</string>
    <string name="news_hunt">News Hunt</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="sports">Sports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source_toi">Source: TOI</string>
    <string name="date_12_aug_2019">Date: 12 Aug 2019</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
</resources>